--- a/app/src/main/res/layout/activity_channel.xml
+++ b/app/src/main/res/layout/activity_channel.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".ChannelActivities.ChannelListActivity">
+    tools:context="erjon.lamy.channelmessaging.ChannelActivities.ChannelActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,7 +21,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_channel_list" />
-
+    <include layout="@layout/content_channel" />
 
 </android.support.design.widget.CoordinatorLayout>
