--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="erjon.lamy.channelmessaging.LoginActivity"
+    tools:context=".ChannelActivities.LoginActivity"
     tools:showIn="@layout/activity_login"
     android:orientation="vertical"
     android:weightSum="1">
