--- a/app/src/main/res/layout-land/content_channel_list.xml
+++ b/app/src/main/res/layout-land/content_channel_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,9 +8,18 @@
     tools:context=".ChannelActivities.ChannelListActivity"
     tools:showIn="@layout/activity_channel_list">
     <fragment
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_weight="2"
         android:name="erjon.lamy.channelmessaging.fragments.ChannelListFragment"
         android:id="@+id/fragmentA_ID"
         tools:layout="@layout/fragment_channel_list" />
-</RelativeLayout>
+
+    <fragment
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="2"
+        android:name="erjon.lamy.channelmessaging.fragments.MessageFragment"
+        android:id="@+id/fragmentB_ID"
+        tools:layout="@layout/fragment_channel" />
+</LinearLayout>
