--- a/app/src/main/res/layout/fragment_channel.xml
+++ b/app/src/main/res/layout/fragment_channel.xml
@@ -29,12 +29,12 @@
             android:id="@+id/etMessage"
             android:layout_weight="4"/>
 
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:id="@+id/sendBtn"
-            android:text="Send"/>
+            android:background="@drawable/ic_send_black_24dp"/>
     </LinearLayout>
 
 </RelativeLayout>
