--- a/app/src/main/res/layout/fragment_channel_list.xml
+++ b/app/src/main/res/layout/fragment_channel_list.xml
@@ -8,6 +8,7 @@
         android:layout_height="match_parent"
         android:id="@+id/listView"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_margin="5dp"/>
 
 </RelativeLayout>
