--- a/app/src/main/res/layout/message_layout.xml
+++ b/app/src/main/res/layout/message_layout.xml
@@ -1,19 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/tvUserMessage"
-        android:layout_weight="0.09" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_toRightOf="@+id/ivProfilePic">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/tvUserMessage"
+            android:layout_weight="0.09" />
 
-    <TextView
-        android:layout_width="352dp"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/tvDate" />
-</LinearLayout>
+        <TextView
+            android:layout_width="352dp"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/tvDate" />
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/ivProfilePic"/>
+
+</RelativeLayout>
